2010-07-16  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtable.R (.computeWidths): Trying to fix size of table object

2010-07-05  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gedit.R: put in fix to handle NA values -- which were not
	handled gracefully. Use <NA> string to represent NA

	* R/gframe.R: was using old means to handle expand,
	... arguments. Changed as this caused issues when using layouts.

	* R/ggroup.R: put default borderwidth to 0 -- was 10 for some
	reason which was too much space

2010-06-29  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gfile.R: bug fix; new initialdir argument (hidden) 

2010-06-14  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtable.R (.computeWidths): removed autoscroll call - caused
	issues with initial drawing of screen. Also in gtext.

2010-05-28  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdroplist.R: svalue(obj, index=TRUE) <- -1 should work now (no
	value set)

2010-05-27  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gedit.R: added visible<- method

2010-05-22  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdialogs.R: fix to dialogs when message includes detail
	(message has length 2 or more).

	* R/gfile.R: bug fix with hidden argument multiple

2010-05-20  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gradio.R: try to fix issue that handler called before variable
	is set. (ButtonRelease and tcl("after")). Fix to index=TRUE call

2010-05-19  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/glabel.R: fix to svalue<- to collapse with '\n', not
	" ". Fix to svalue() to respect "\n".

2010-05-15  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gfile.R: added multiple=TRUE argument for file selection. Not
	yet in API, but will be

	* R/gtable.R (.computeWidths): fix to svalue(...,index=TRUE)
	Thanks Richie
