@@ -1,62 +1,79 @@
 ## Handler code
-## allHandlers is keyed by ID,type,handlerID then flag, a logical
-## ID, type, handlerID are characters
+## redid 7/2010
 
+##' run handlers for this signal
+##'
+##' @param obj is gWidgets object
+##' @param signal the signal (handler list keyed by signal)
+##' @param h list with proper components from call
+runHandlers <- function(obj, signal, h, ...) {
+  l <- tag(obj, "..handlers")
+  signalList <- l[[signal]]
+  sapply(signalList, function(i) {
+    if(!i$blocked) {
+      i$handler(h, ...)
+    }
+  })
+}
 
-## use actualobj to pass something different to h$obj in handlers
-
-## see addHandkerKeystroke for example where FUN is passed in so that
-## arguments such as %K can be realized (for KeyRelease events)
-## see bind man for key codes
-### This stores the handlers
-### it will be hash keyed by ID and then handlerID.
-### The ID allows for garbage collection (sometime)
-allHandlers = list()
-## list with type [[ID]][[type]][[handlerID]]
-assignInNamespace("allHandlers",list(),ns="gWidgetstcltk")
-
+##' add a handler to an object
+##'
+##' The basic idea is that a list of handlers (keyed by the signal) is kept along with a flag
+##' indicating whether the handler is blocked or not
+##' The binding is done to call the runHandlers function so that this flag can be intercepted
 setMethod(".addHandler",
           signature(toolkit="guiWidgetsToolkittcltk",obj="gWidgettcltk"),
           function(obj, toolkit,
                    signal, handler, action=NULL, ...) {
             ## use tkbind
-            ## What to do for an ID, how to deregister?
-            ID = as.character(obj@ID)
 
+            l <- tag(obj, "..handlers")
+            if(is.null(l))
+              l <- list()
+
+            signalList <- l[[signal]]
+            if(is.null(signalList))
+              signalList <- list()
+
+
+            ## each component of signalList is a list with ID, blocked, handler, action=action
+            id <- digest(Sys.time())    # some unique key
+            hList <- list(ID=id,
+                          blocked=FALSE,
+                          handler=handler,
+                          action=action)
+            
+            signalList[[length(signalList) + 1]] <- hList # append
+            l[[signal]] <- signalList
+            tag(obj, "..handlers") <- l
+
+            id <- list(id=id, signal=signal) # need this to block/remove/unblock
+            
             theArgs = list(...)
-            actualobj <- obj
-            if(!is.null(theArgs$actualobj))
-              actualobj <- theArgs$actualobj
+
+            actualobj <- getWithDefault(theArgs$actualobj, obj)
+
             ## theArgs may have an extra with name=key, value
             FUN <- theArgs$FUN
             handler <- force(handler)
             if(is.null(FUN)) {
-              tkbind(getWidget(obj),signal,
+              tkbind(getWidget(obj), signal,
                      function(...) {
                        h = list(
                          obj=actualobj,
                          action=action)
-                       handler(h,...)
+
+                       runHandlers(obj, signal, h, ...)
+#                       handler(h,...)
                      })
             } else {
+              ## when does this get called?
+              stop("DEBUG: Call addHandler with FUN")
               tkbind(getWidget(obj), signal,FUN)
             }
 
-            ## We use store the handlers. In this case, we only use the signal
-            ## for remove handler. No block,unblock
-            allHandlers <- getFromNamespace("allHandlers",ns="gWidgetstcltk")
-            
-            if(length(allHandlers[[ID]][[signal]]) == 0)
-              handlerID <- "1"
-            else
-              handlerID <- as.character(length(allHandlers[[ID]][[signal]]) + 1)
-            
-            
-            allHandlers[[ID]][[signal]][[handlerID]]$flag <- TRUE
-            assignInNamespace("allHandlers",allHandlers,ns="gWidgetstcltk")
-            
-            ## ID
-            invisible(list(type=signal,handlerID=handlerID))
+            ## return id
+            invisible(id)
           })
 
 ## for tcltk objects
@@ -75,65 +92,159 @@ setMethod(".addHandler",
             invisible(list(type=NULL,handlerID=NULL))
           })
 
-
-setMethod(".removehandler",
-          signature(toolkit="guiWidgetsToolkittcltk",obj="gWidgettcltk"),
-          function(obj, toolkit, ID=NULL, ...) {
-            ## ID here has two components
-            type = ID$type
-            handlerID=ID$handlerID
-            if(is.null(type) || is.null(handlerID)) return()
-            
-            ID = as.character(obj@ID)
-
-
-            ## set flag to be FALSE, then remove
-            allHandlers = getFromNamespace("allHandlers",ns="gWidgetstcltk")
-            allHandlers[[ID]][[type]][[handlerID]]$flag <- FALSE
-            ## now store the hash
-            assignInNamespace("allHandlers",allHandlers,ns="gWidgetstcltk")
-
-            ## idle is handled differently, via flag<-FALSE
-            ## seee FAQ 3.2 for this
-            if(type != "idle") { 
-              .addHandler(obj,toolkit,signal=type,handler = function(...) {}) # blank functin
-            }
-          })
-
+##' idle handler is different == have this hack to keep calling "after"
 setMethod(".addhandleridle",
           signature(toolkit="guiWidgetsToolkittcltk",obj="gWidgettcltk"),
           function(obj, toolkit,
                    handler=NULL, action=NULL, interval=1000, ...) {
 
-            ID = as.character(obj@ID)
-            allHandlers = getFromNamespace("allHandlers",ns="gWidgetstcltk")
-            if(length(allHandlers[[ID]]) == 0)
-              handlerID = "1"
-            else
-              handlerID = as.character(length(allHandlers[[ID]]) + 1)
-
-            allHandlers[[ID]][["idle"]][[handlerID]]$flag <- TRUE
-            assignInNamespace("allHandlers",allHandlers,ns="gWidgetstcltk")
-
+            signal <- "idle"
+            
+            l <- tag(obj, "..handlers")
+            if(is.null(l))
+              l <- list()
+            
+            signalList <- l[[signal]]
+            if(is.null(signalList))
+              signalList <- list()
+            
+            
+            ## each component of signalList is a list with ID, blocked, handler, action=action
+            id <- digest(Sys.time())    # some unique key
+            hList <- list(ID=id,
+                          blocked=FALSE,
+                          handler=handler,
+                          action=action)
+            
+            signalList[[length(signalList) + 1]] <- hList # append
+            l[[signal]] <- signalList
+            tag(obj, "..handlers") <- l
+            
+            
             ## use tcl("apply",time, function) in a while loop here
             h = list()
             h$obj=obj
             h$action=action
             
             f <- function() {
-              if(!windowExists(obj)) return() # otherwise, issue when destroyed
-              handler(h)
-              allHandlers = getFromNamespace("allHandlers",ns="gWidgetstcltk")
-              flag = allHandlers[[ID]][["idle"]][[handlerID]]$flag
-              if (flag)
+              if(!windowExists(obj))
+                return() # otherwise, issue when destroyed
+
+              l <- tag(obj, "..handlers")
+              sigList <- l[['idle']]
+              ind <- sapply(sigList, function(i) i$ID == id)
+              if(any(ind)) {
+                if(!sigList[[which(ind)]]$blocked)
+                  sigList[[which(ind)]]$handler(h)
                 tcl("after", interval, f)
+              }
             }
             ## start it off
             f()
             ## ID
-            invisible(list(type="idle",handlerID=handlerID))
+            id <- list(id=id, signal="idle")
           })
 
+
+##' Function to call to update the "blocked" flag on a handler. runHandlers consults this
+##' before making the call
+.blockUnblock <- function(obj, ID, block=TRUE, ...) {
+  l <- tag(obj, "..handlers")
+  
+  if(is.null(ID)) {
+    ## do all IDS
+    sapply(names(l), function(signal) {
+      sigList <- l[[signal]]
+      if(length(sigList)) {
+        for(i in sigList)
+          .blockUnblock(obj, list(id=i$ID, signal=signal), block, ...)
+      }
+    })
+    return()
+  } else {
+    id <- ID$id
+    signal <- ID$signal
+    if(is.null(id) || is.null(signal))
+      return()
+    
+    if(is.null(l[[signal]]))
+      return()                 # no signal list
+    ind <- sapply(l[[signal]], function(i) {
+      i$ID == id
+    })
+    
+    if(!any(ind))
+      return()   
+    
+    for(i in which(ind)) {
+      l[[signal]][[i]]$blocked <- block
+    }
+  }
+  
+  tag(obj, "..handlers") <- l
+}
+
+##' call to block a handler by ID. If ID=NULL, all handlers are blocked
+setMethod(".blockhandler",
+          signature(toolkit="guiWidgetsToolkittcltk",obj="gWidgettcltk"),
+          function(obj, toolkit, ID=NULL, ...) {
+            .blockUnblock(obj, ID, block=TRUE)
+          })
+
+##' call to unblock a handler by ID. If ID=NULL, all handlers are unblocked
+setMethod(".unblockhandler",
+          signature(toolkit="guiWidgetsToolkittcltk",obj="gWidgettcltk"),
+          function(obj, toolkit, ID=NULL, ...) {
+            .blockUnblock(obj, ID, block=FALSE)            
+          })
+
+##' method to remove a handler
+setMethod(".removehandler",
+          signature(toolkit="guiWidgetsToolkittcltk",obj="gWidgettcltk"),
+          function(obj, toolkit, ID=NULL, ...) {
+
+            if(is.null(ID)) {
+              ## remove all handlers. Call this recursively
+              l <- tag(obj, "..handlers")
+              sapply(names(l), function(signal) {
+                sigList <- l[[signal]]
+                if(length(sigList)) {
+                  for(i in sigList)
+                    .removehandler(obj, toolkit, ID=list(id=i$ID, signal=signal))
+                }
+              })
+            } else {
+              ## ID here has two components: id, signal
+              id <- ID$id
+              signal <- ID$signal
+              
+              if(is.null(id) || is.null(signal))
+                return()
+              
+              ## ## idle is handled differently, via flag<-FALSE
+              ## ## seee FAQ 3.2 for this
+              ## if(signal == "idle") { 
+              ##   .addhandleridle(obj, toolkit, signal=type, handler = function(...) {}) # blank functin
+              ##   return()
+              ## }
+              
+              
+              l <- tag(obj, "..handlers")
+              if(is.null(l[[signal]]))
+                return()                 # no signal list
+              ind <- sapply(l[[signal]], function(i) {
+                i$ID == id
+              })
+              
+              if(!any(ind))
+                return()                  # no match on id
+              
+              for(i in which(ind))
+                l[[signal]][[i]] <- NULL
+              tag(obj, "..handlers") <- l
+            }
+          })
+          
 
 
 
